--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ whitenoise = "*"
 mysqlclient = "*"
 django-heroku = "*"
 python-decouple = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.6"
