--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+certifi==2018.4.16
+chardet==3.0.4
+colorama==0.3.9
+dj-database-url==0.5.0
 Django==2.0.5
-django-heroku==0.1.0
+django-heroku==0.3.1
+djangorestframework==3.8.2
 gunicorn==19.8.1
+httpie==0.9.9
+idna==2.6
 mysqlclient==1.3.12
+pew==1.1.5
+pipenv==11.10.1
+psutil==5.3.1
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+Pygments==2.2.0
 python-decouple==3.1
 pytz==2018.4
+requests==2.18.4
+urllib3==1.22
+virtualenv==15.2.0
 virtualenv-clone==0.3.0
 whitenoise==3.3.1
