--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2018.4.16
 chardet==3.0.4
 colorama==0.3.9
 dj-database-url==0.5.0
-Django==2.0.5
+django>=2.0.10
 django-heroku==0.3.1
 djangorestframework==3.8.2
 gunicorn==19.8.1
@@ -17,8 +17,8 @@ psycopg2-binary==2.7.4
 Pygments==2.2.0
 python-decouple==3.1
 pytz==2018.4
-requests==2.18.4
-urllib3==1.22
+requests>=2.20.0
+urllib3>=1.23
 virtualenv==15.2.0
 virtualenv-clone==0.3.0
 whitenoise==3.3.1
